test/sema/illegal-cast.delta.output
illegal-cast.delta:5:13: error: illegal cast from 'bool' to 'int**'
    var i = cast<int**>(false);
            ^
