test/sema/illegal-cast.delta
// RUN: %check_errors %not %delta -typecheck %s

void main() {
    // CHECK: [[@LINE+1]]:13: error: illegal cast from 'bool' to 'int**'
    var i = cast<int**>(false);
}
